[package]
name = "chunk-parser"
version = "0.3.4"
authors = ["StealthOfKing <sok@monocyte.host>"]
edition = "2021"
license = "GPL-3.0"
description = "Generic chunk parser pattern"

[dependencies]
fourcc = { git = "https://github.com/StealthOfKing/rust-fourcc.git" }
chunk-parser-derive = { git = "https://github.com/StealthOfKing/rust-chunk-parser-derive.git" }
